Fix text moving, media body active cropping

--- a/app/assets/stylesheets/components/_music_index.scss
+++ b/app/assets/stylesheets/components/_music_index.scss
@@ -185,6 +185,7 @@ ul {
 }
 
 .media__body {
+    backface-visibility: hidden;
     background: #000;
     opacity: 0;
     top: 0;
