--- a/app/assets/stylesheets/components/_new_session.scss
+++ b/app/assets/stylesheets/components/_new_session.scss
@@ -313,7 +313,7 @@ a {
 }
 
 .music-index-item:active .media__body.index-page {
-    transform: scale(.98);
+    transform: scale(1);
 }
 
 .music-index-item:active .media .media__image.index-page {
